{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 22,
  "lineage": "a9cfccf6-aaa2-8a76-fe4d-e240258111ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d03ce209db75523",
            "arn": "arn:aws:ec2:us-west-1:217134240196:instance/i-045a5cca7446af144",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045a5cca7446af144",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038c8cc3f80dcf0b0",
            "private_dns": "ip-10-0-1-33.us-west-1.compute.internal",
            "private_ip": "10.0.1.33",
            "public_ip": "54.151.112.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0823c0a4dfc9992f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05414d4a3344f9b13",
            "tags": {
              "Name": "Jenkins_Master"
            },
            "tags_all": {
              "Name": "Jenkins_Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a5924b261242ab4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_rt",
            "aws_route_table_association.master_internet_route",
            "aws_security_group.vpc_sg",
            "aws_subnet.master_public",
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d03ce209db75523",
            "arn": "arn:aws:ec2:us-west-1:217134240196:instance/i-0768b122d8eb70969",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0768b122d8eb70969",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05cd4fc9340a84e43",
            "private_dns": "ip-10-0-2-179.us-west-1.compute.internal",
            "private_ip": "10.0.2.179",
            "public_ip": "54.215.240.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d478ee5fcf4156c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091029521fc84f626",
            "tags": {
              "Master_Private_IP": "10.0.1.33",
              "Name": "Jenkins_Worker_1"
            },
            "tags_all": {
              "Master_Private_IP": "10.0.1.33",
              "Name": "Jenkins_Worker_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a5924b261242ab4"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_route_table_association.worker_internet_route",
            "aws_security_group.vpc_sg",
            "aws_subnet.worker_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:217134240196:internet-gateway/igw-047303ad252bb7494",
            "id": "igw-047303ad252bb7494",
            "owner_id": "217134240196",
            "vpc_id": "vpc-0de2db114db5e5c34"
          },
          "dependencies": [
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set_vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0945569fd24b21f39",
            "original_route_table_id": "rtb-000889aa25edfc347",
            "route_table_id": "rtb-046ff588726410a3f",
            "vpc_id": "vpc-0de2db114db5e5c34"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_rt",
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:217134240196:route-table/rtb-046ff588726410a3f",
            "id": "rtb-046ff588726410a3f",
            "owner_id": "217134240196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047303ad252bb7494",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_internet_rt"
            },
            "tags_all": {
              "Name": "vpc_internet_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de2db114db5e5c34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "master_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ad838dfb033de65",
            "route_table_id": "rtb-046ff588726410a3f",
            "subnet_id": "subnet-05414d4a3344f9b13"
          },
          "dependencies": [
            "aws_route_table.internet_rt",
            "aws_subnet.master_public",
            "aws_vpc.west1",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "worker_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c3b6db94dfa80b8",
            "route_table_id": "rtb-046ff588726410a3f",
            "subnet_id": "subnet-091029521fc84f626"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_rt",
            "aws_subnet.worker_public",
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:217134240196:security-group/sg-00a5924b261242ab4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a5924b261242ab4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic from port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow from port 22 ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_sg",
            "name_prefix": "",
            "owner_id": "217134240196",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de2db114db5e5c34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "master_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:217134240196:subnet/subnet-05414d4a3344f9b13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05414d4a3344f9b13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217134240196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "master"
            },
            "tags_all": {
              "Name": "master"
            },
            "vpc_id": "vpc-0de2db114db5e5c34"
          },
          "dependencies": [
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:217134240196:subnet/subnet-091029521fc84f626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091029521fc84f626",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217134240196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "worker"
            },
            "tags_all": {
              "Name": "worker"
            },
            "vpc_id": "vpc-0de2db114db5e5c34"
          },
          "dependencies": [
            "aws_vpc.west1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:217134240196:vpc/vpc-0de2db114db5e5c34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a8193f7e185125c",
            "default_route_table_id": "rtb-046ff588726410a3f",
            "default_security_group_id": "sg-0be0588c0e5d1cb03",
            "dhcp_options_id": "dopt-07040d74d11ac111e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0de2db114db5e5c34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046ff588726410a3f",
            "owner_id": "217134240196",
            "tags": {
              "Name": "west1"
            },
            "tags_all": {
              "Name": "west1"
            }
          }
        }
      ]
    }
  ]
}